{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 58,
  "lineage": "e78ed79d-f1ad-3c47-ceca-8e0d84727713",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428846500808:security-group/sg-05b32a061195b8489",
            "description": "Security group for allowing traffic on ports 5432 to 6379",
            "egress": [],
            "id": "sg-05b32a061195b8489",
            "ingress": [],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "428846500808",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ab7d5039a224b27"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_traffic_5432_6379",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-495776973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b32a061195b8489",
            "security_group_rule_id": "sgr-0a6bac022064f9c2e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my_security_group"
          ]
        }
      ]
    }
  ]
}